# docs.rs

./: .docker.env.sample  .dockerignore  .env.tests  :wa  Cargo.toml  Justfile  NOTES.md  README.md  TODO.md  build.rs  clippy.toml  docker-compose.yml  qg aa
.github/workflows/: ci.yml  docker.yml
.sqlx/: query-021f7970330a85b9e485f5c3447d18e0cb87729d8c1602435f9fe37ab5d7506c.json  query-05d4bd9f7cf8fa49143f7e8b64227883108ef6a815ba4c91a8d129ead64c59c8.json  query-066656ac8beb1ea0e648063c4f1f474a51c007946fac03946ae33a91ca4e2d27.json  query-06825213170b7f3b441e6dc628b5bd67a7cdb38d5ee13ecaec0b63271ab6b649.json  query-0add3cb31e51020cacca079cecaf10e8394900fb5e492513fee1d6c84817a995.json  query-3bdfc543168cd424c1b394884d205ae04f650ad9956c96ccf0b88b4a5b275b71.json  query-43d02dbb14c99c6befee6ca21d2ddb0abbd84057a11a8310e58607f38d6cb7a3.json  query-5ffac6cd4834d6c500733df312197b2884d6b452beb2db7d753fd2dc72fdb186.json  query-60accfe674de796dfc20077095e00bb854f208fd4ff7d954e1ed476667fd2eb4.json  query-742dcf6575cec3b2ad38b180d3f0ef637fe055dfef59c3cc89d907282a0fa77b.json  query-85776ea9649e7860e9dd023f16d820b35015af1ce7e67d66280e905c86e4aa96.json  query-b4ebc9f3e0770457003c321070f8301fc7b92dfda3fea892f1957eda0c3ae018.json  query-d040ea24d11df2a375c5ad2f3a8aa1d9e10a7b951b7759b8c6d9e949d9f2c9a9.json  query-d5d73e5899c9f0318d0357c7c66a980796789de5cb46b0cd169fcc86f13268c9.json  query-df04d1f19419415a5eebfa1f8c5cc85fb466d9f455802cde184a522593c56297.json
crates/docs-rs-consistency-check/: Cargo.toml
crates/docs-rs-consistency-check/src/: db.rs  index.rs  lib.rs  main.rs
crates/font-awesome-as-a-crate/: build.rs
dockerfiles/: Dockerfile  Dockerfile-gui-tests  Example  prometheus.yml  run-gui-tests.sh
docs_rs_registry_watcher/: Cargo.toml
docs_rs_registry_watcher/src/: main.rs
justfiles/: cli.just  development.just  services.just  testing.just  utils.just
migrations/: 20240404031600_documentation_size.down.sql  20240404031600_documentation_size.up.sql
src/: build_queue.rs  cdn.rs  config.rs  context.rs  index.rs  lib.rs  logging.rs  registry_api.rs
src/cdn/: fastly.rs
src/db/: add_package.rs  blacklist.rs  delete.rs  file.rs  mimes.rs  mod.rs  pool.rs  types.rs
src/docbuilder/: limits.rs  mod.rs  rustwide_builder.rs
src/metrics/: macros.rs  mod.rs
src/repositories/: github.rs
src/storage/: archive_index.rs  compression.rs  database.rs  mimes.rs  mod.rs  s3.rs
src/test/: fakes.rs  mod.rs
src/utils/: cargo_metadata.rs  daemon.rs  html.rs  logging.rs  mod.rs  opentelemetry.rs  queue_builder.rs
src/web/: build_details.rs  builds.rs  cache.rs  crate_details.rs  csp.rs  error.rs  escaped_uri.rs  extractors.rs  file.rs  (+12 more)
templates/: macros.html
(+96 files in other folders)
