[workspace]
resolver = "2" 

members = ["crates/bin/*", "crates/lib/*"]

default-members = [
    "crates/bin/docs_rs_admin",
    "crates/bin/docs_rs_builder",
    "crates/bin/docs_rs_watcher",
    "crates/bin/docs_rs_web",
]

exclude = [
    ".rustwide-docker",
    ".workspace",
    "crates/bin/docs_rs_builder/.rustwide-docker",
    "crates/bin/docs_rs_builder/.workspace",
    "crates/bin/docs_rs_builder/tests/crates",
    "ignored",
]

[workspace.dependencies]
anyhow = { version = "1.0.42", features = ["backtrace"] }
askama = "0.15.1"
async-stream = "0.3.5"
axum-extra = { version = "0.12.0", features = ["middleware", "routing", "typed-header"] }
base64 = "0.22"
bon = { version = "3.8.1", features = ["experimental-overwritable"] }
chrono = { version = "0.4.11", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.0.22", features = ["derive"] }
derive_more = { version = "2.0.0", features = ["deref", "display", "from", "from_str", "into"] }
futures-util = "0.3.5"
http = "1.0.0"
itertools = "0.14.0" 
mime = "0.3.16"
mockito = "1.0.2"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "metrics"] }
opentelemetry-resource-detectors = "0.10.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
postcard = { version = "1.1.3", default-features = false, features = ["use-std"] }
pretty_assertions = "1.4.0"
rand = "0.9"
rayon = "1.6.1"
regex = "1"
reqwest = { version = "0.13", features = ["gzip", "json"] }
sentry = { version = "0.46.0", features = ["anyhow", "backtrace", "panic", "tower-http", "tracing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.4.0"
slug = "0.1.1"
sqlx = { version = "0.8", features = ["chrono", "postgres", "runtime-tokio", "sqlite"] }
strum = { version = "0.27.0", features = ["derive"] }
tempfile = "3.1.0"
test-case = "3.0.0"
thiserror = "2.0.3"
tokio = { version = "1.0", features = ["macros", "process", "rt-multi-thread", "signal", "sync"] }
toml = "0.9.2"
tracing = "0.1.37"
url = { version = "2.1.1", features = ["serde"] }
walkdir = "2"
